--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,6 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- echo hello from build
+- script: echo hello from build
 #- script: dotnet build --configuration $(buildConfiguration)
 #  displayName: 'dotnet build $(buildConfiguration)'
